--- a/TidyTuesday(2021-08-24)/Code.Rmd
+++ b/TidyTuesday(2021-08-24)/Code.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Tidy Tuesday 8/24/21"
+title: "Tidy Tuesday 2021-08-24"
 author: "NkSmartbucks"
-date: "8/24/2021"
+date: "August 24th, 2021"
 output: html_document
 ---
 
