--- a/TidyTuesday(2021-08-31)/Code.Rmd
+++ b/TidyTuesday(2021-08-31)/Code.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "TidyTuesday_2021-08-31"
 author: "Nico Kosa"
-date: "8/31/2021"
+date: "August 31st, 2021"
 output: html_document
 ---
 
